--- a/pages/80.html
+++ b/pages/80.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4862/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -368,7 +366,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#scope'>Scope</a></li><li><a href='#nonscope'>Nonscope</a></li><li><a href='#idea_of_relevance_of_higher_categories'>Idea of relevance of higher categories</a></li><li><a href='#metaphysics'>Metaphysics</a></li><li><a href='#enquiry'>Enquiry</a></li><li><a href='#philosophical_sentiments'>Philosophical sentiments</a></li><li><a href='#references_and_links'>References and links</a><ul><li><a href='#related_entries'>Related entries</a></li><li><a href='#general'>General</a></li><li><a href='#books'>Books</a></li><li><a href='#articles'>Articles</a></li><li><a href='#blog_and_forum_discussions_conferences'>Blog and forum discussions, conferences</a></li></ul></li></ul></div>
 <h2 id='scope'>Scope</h2>
 
-<p>In the philosophical part of <math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab we discuss higher category theory and its repercussions in philosophy. More widely, the future entries on philosophy in nLab should also contain <a class='existingWikiWord' href='/nlab/show/philosophy+of+mathematics'>philosophy of mathematics</a> in general, and of <a class='existingWikiWord' href='/nlab/show/foundations+and+logic'>logic and foundations</a> in particular. As it is usual for philosophy and the study of thought, it is usefully carried on via study of historical thinkers and their ideas, hence some idea-related aspects of the <a class='existingWikiWord' href='/nlab/show/history+of+mathematics'>history of mathematics</a> are welcome.</p>
+<p>In the philosophical part of <math class='maruku-mathml' display='inline' id='mathml_024b5bc6d793e9b271be8d07cae19fd597fd1ec7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab we discuss higher category theory and its repercussions in philosophy. More widely, the future entries on philosophy in nLab should also contain <a class='existingWikiWord' href='/nlab/show/philosophy+of+mathematics'>philosophy of mathematics</a> in general, and of <a class='existingWikiWord' href='/nlab/show/foundations+and+logic'>logic and foundations</a> in particular. As it is usual for philosophy and the study of thought, it is usefully carried on via study of historical thinkers and their ideas, hence some idea-related aspects of the <a class='existingWikiWord' href='/nlab/show/history+of+mathematics'>history of mathematics</a> are welcome.</p>
 
 <h2 id='nonscope'>Nonscope</h2>
 
@@ -402,11 +400,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>There ought to be a <a class='existingWikiWord' href='/nlab/show/vertical+categorification'>categorified</a> <a class='existingWikiWord' href='/nlab/show/internal+logic'>logic</a>, or 2-logic. There are some suggestions that existing work on modal logic is relevant. Blog discussion: <a href='http://golem.ph.utexas.edu/category/2007/11/concrete_groups_and_axiomatic_1.html'>I</a>, <a href='http://golem.ph.utexas.edu/category/2008/02/2galois_and_2logic.html'>II</a>, <a href='http://golem.ph.utexas.edu/category/2008/03/worrying_about_2logic.html'>III</a>, <a href='http://golem.ph.utexas.edu/category/2008/11/the_internal_language_of_a_2to.html'>IV</a>. Mike Shulman’s project: <a href='http://ncatlab.org/michaelshulman/show/2-categorical+logic'>2-categorical logic</a>.</p>
+<p>There ought to be a <a class='existingWikiWord' href='/nlab/show/vertical+categorification'>categorified</a> <a class='existingWikiWord' href='/nlab/show/internal+logic'>logic</a>, or 2-logic. There are some suggestions that existing work on modal logic is relevant. Blog discussion: <a href='http://golem.ph.utexas.edu/category/2007/11/concrete_groups_and_axiomatic_1.html'>I</a>, <a href='https://golem.ph.utexas.edu/category/2008/01/2toposes.html'>II</a>, <a href='http://golem.ph.utexas.edu/category/2008/02/2galois_and_2logic.html'>III</a>, <a href='http://golem.ph.utexas.edu/category/2008/03/worrying_about_2logic.html'>IV</a>, <a href='http://golem.ph.utexas.edu/category/2008/11/the_internal_language_of_a_2to.html'>V</a>. Mike Shulman’s project: <a href='http://ncatlab.org/michaelshulman/show/2-categorical+logic'>2-categorical logic</a>.</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>Homotopy type theory</a> may be thought of as a vertical categorification of logic to <math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infinity,1)</annotation></semantics></math>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>Homotopy type theory</a> may be thought of as a vertical categorification of logic to <math class='maruku-mathml' display='inline' id='mathml_024b5bc6d793e9b271be8d07cae19fd597fd1ec7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infinity,1)</annotation></semantics></math>.</p>
 </li>
 
 <li>
@@ -511,7 +509,7 @@ margin-left: 0em;
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/adjoint+modality'>unity of opposites</a>
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/becoming'>becoming</a> <math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='verythinmathspace'>:</mo></mrow><annotation encoding='application/x-tex'>\colon</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/nothing'>nothing</a> <math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/being'>being</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/becoming'>becoming</a> <math class='maruku-mathml' display='inline' id='mathml_024b5bc6d793e9b271be8d07cae19fd597fd1ec7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='verythinmathspace'>:</mo></mrow><annotation encoding='application/x-tex'>\colon</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/nothing'>nothing</a> <math class='maruku-mathml' display='inline' id='mathml_024b5bc6d793e9b271be8d07cae19fd597fd1ec7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/being'>being</a></li>
 </ul>
 </li>
 </ul>
@@ -538,7 +536,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Fernando+Zalamea'>Fernando Zalamea</a>, <em>Filosofía sintética de las matemáticas contemporáneas</em>, (Spanish) Obra Selecta. Editorial Universidad Nacional de Colombia, Bogotá, 2009. 231 pp. <a href='http://www.ams.org/mathscinet-getitem?mr=2599170'>MR2599170</a>, ISBN: 978-958-719-206-3, <a href='http://files.acervopeirceano.webnode.es/200000065-18c1b19bb9/Zalamea-Fil-Sint-Mat-Cont.pdf'>pdf</a>. Transl. into English by Zachary Luke Fraser: <em>Synthetic philosophy of contemporary mathematics</em>, Sep. 2011. <a href='http://www.urbanomic.com/pub_syntheticmath.php'>bookpage</a>. Some excerpts <a href='http://ifile.it/2c3qgz5'>here</a>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/Fernando+Zalamea'>Fernando Zalamea</a>, <em>Filosofía sintética de las matemáticas contemporáneas</em>, (Spanish) Obra Selecta. Editorial Universidad Nacional de Colombia, Bogotá, 2009. 231 pp. <a href='http://www.ams.org/mathscinet-getitem?mr=2599170'>MR2599170</a>, ISBN: 978-958-719-206-3, <a href='&amp;lt;http://files.acervopeirceano.webnode.es/200000065-18c1b19bb9/Zalamea-Fil-Sint-Mat-Cont.pdf&gt;'>pdf</a>. Transl. into English by Zachary Luke Fraser: <em>Synthetic philosophy of contemporary mathematics</em>, Sep. 2011. <a href='http://www.urbanomic.com/pub_syntheticmath.php'>bookpage</a>. Some excerpts <a href='http://ifile.it/2c3qgz5'>here</a>.</p>
 </li>
 
 <li>
@@ -607,9 +605,9 @@ margin-left: 0em;
 <h3 id='blog_and_forum_discussions_conferences'>Blog and forum discussions, conferences</h3>
 
 <ul>
-<li><math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Café on Mathematical reality: <a href='http://golem.ph.utexas.edu/category/2008/10/mathematical_reality.html'>I</a>, <a href='http://golem.ph.utexas.edu/category/2008/11/mathematical_robustness.html'>II</a></li>
+<li><math class='maruku-mathml' display='inline' id='mathml_024b5bc6d793e9b271be8d07cae19fd597fd1ec7_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Café on Mathematical reality: <a href='http://golem.ph.utexas.edu/category/2008/10/mathematical_reality.html'>I</a>, <a href='http://golem.ph.utexas.edu/category/2008/11/mathematical_robustness.html'>II</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Gavin+Wraith'>Gavin</a> wrote about “The dangers of category theory”, see <math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Forum <a href='http://www.math.ntnu.no/~stacey/Mathforge/nForum/comments.php?DiscussionID=2472&amp;Focus=21255#Comment_21255'>here</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/Gavin+Wraith'>Gavin</a> wrote about “The dangers of category theory”, see <math class='maruku-mathml' display='inline' id='mathml_024b5bc6d793e9b271be8d07cae19fd597fd1ec7_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Forum <a href='http://www.math.ntnu.no/~stacey/Mathforge/nForum/comments.php?DiscussionID=2472&amp;Focus=21255#Comment_21255'>here</a></li>
 
 <li>Simplicityonference: Ideals of Practice in Mathematics &amp; the Arts; videos online at youtube <a href='http://s-i-m-p-l-i-c-i-t-y.org/videos.html'>channel</a></li>
 </ul>
@@ -622,19 +620,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 15, 2017 18:44:30 
-  by <a class="existingWikiWord" href="/nlab/show/Daniel+Luckhardt">Daniel Luckhardt</a>
-  (2a02:810d:640:56d0:218a:d21f:fef9:31ae)
+  <p>
+  Last revised on May  3, 2018 at 04:56:50.
+  See the <a href="https://ncatlab.org/nlab/history/philosophy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/philosophy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/philosophy/70" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(70 revisions)</span> | <a href="/nlab/show/diff/philosophy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/philosophy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/philosophy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/philosophy/71" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(71 revisions)</span> | <a href="/nlab/show/diff/philosophy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/philosophy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/philosophy/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/philosophy" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/philosophy" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/philosophy" id="view_source" rel="nofollow">Source</a>
