--- a/pages/16281.html
+++ b/pages/16281.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Е. Б. Богомольний in nLab
+      Е. Б. Богомольный in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,19 +283,17 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Е. Б. Богомольний
+      Е. Б. Богомольный
   </h1>
 
 
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8521/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,13 +306,17 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Evgeny Bogomolny</p>
+    <p>
+ 
+</p>
+
+<p>Evgeny Bogomolny</p>
 
 <ul>
 <li><a href='http://www.itp.ac.ru/en/persons/bogomolny-evgeny-borisovich/'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_773479f744a3d264e2389ff3c7ff645e40054545_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_b2d0ee74eb013440c667b1601d0e2cd506ee2bee_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS state</a></li>
@@ -330,22 +332,23 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on February 20, 2015 16:05:42 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.113.30.252)
+  <p>
+  Last revised on May  4, 2018 at 11:34:07.
+  See the <a href="https://ncatlab.org/nlab/history/Е. Б. Богомольный" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/%D0%95.+%D0%91.+%D0%91%D0%BE%D0%B3%D0%BE%D0%BC%D0%BE%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/%D0%95.+%D0%91.+%D0%91%D0%BE%D0%B3%D0%BE%D0%BC%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%D0%95.+%D0%91.+%D0%91%D0%BE%D0%B3%D0%BE%D0%BC%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/%D0%95.+%D0%91.+%D0%91%D0%BE%D0%B3%D0%BE%D0%BC%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%D0%95.+%D0%91.+%D0%91%D0%BE%D0%B3%D0%BE%D0%BC%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Е. Б. Богомольный/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
-    <a href="/nlab/print/%D0%95.+%D0%91.+%D0%91%D0%BE%D0%B3%D0%BE%D0%BC%D0%BE%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
-    <a href="/nlab/tex/%D0%95.+%D0%91.+%D0%91%D0%BE%D0%B3%D0%BE%D0%BC%D0%BE%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9" id="view_tex" rel="nofollow">TeX</a>
+    | Views:
+    <a href="/nlab/print/%D0%95.+%D0%91.+%D0%91%D0%BE%D0%B3%D0%BE%D0%BC%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/source/%D0%95.+%D0%91.+%D0%91%D0%BE%D0%B3%D0%BE%D0%BC%D0%BE%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/tex/%D0%95.+%D0%91.+%D0%91%D0%BE%D0%B3%D0%BE%D0%BC%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9" id="view_tex" rel="nofollow">TeX</a>
+    |
+    <a href="/nlab/source/%D0%95.+%D0%91.+%D0%91%D0%BE%D0%B3%D0%BE%D0%BC%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
