--- a/pages/16495.html
+++ b/pages/16495.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -310,13 +309,13 @@ margin-left: 0em;
 <div id="revision">
     <h2 id='statement'>Statement</h2>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_dc305145fa7482ecba558493458dc0376fcef22a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> be a smooth projective <a class='existingWikiWord' href='/nlab/show/complex+manifold'>complex manifold</a>. The <em>integral Hodge conjecture</em> states that every integral <a class='existingWikiWord' href='/nlab/show/Hodge+cycle'>Hodge cycle</a>, i.e. <math class='maruku-mathml' display='inline' id='mathml_dc305145fa7482ecba558493458dc0376fcef22a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn><mi>k</mi></mrow><annotation encoding='application/x-tex'>2k</annotation></semantics></math>-degree <a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology class</a> of <math class='maruku-mathml' display='inline' id='mathml_dc305145fa7482ecba558493458dc0376fcef22a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> which lies in the <math class='maruku-mathml' display='inline' id='mathml_dc305145fa7482ecba558493458dc0376fcef22a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>k</mi><mo>,</mo><mi>k</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(k,k)</annotation></semantics></math>-piece of the <a class='existingWikiWord' href='/nlab/show/Hodge+structure'>Hodge decomposition</a>, is <em>algebraic</em>, i.e. the class of an <a class='existingWikiWord' href='/nlab/show/algebraic+cycle'>algebraic cycle</a>.</p>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_d37d95852e649c6ae9d986882d2987ec54ede6f4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> be a smooth projective <a class='existingWikiWord' href='/nlab/show/complex+manifold'>complex manifold</a>. The <em>integral Hodge conjecture</em> states that every integral <a class='existingWikiWord' href='/nlab/show/Hodge+cycle'>Hodge cycle</a>, i.e. <math class='maruku-mathml' display='inline' id='mathml_d37d95852e649c6ae9d986882d2987ec54ede6f4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn><mi>k</mi></mrow><annotation encoding='application/x-tex'>2k</annotation></semantics></math>-degree <a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology class</a> of <math class='maruku-mathml' display='inline' id='mathml_d37d95852e649c6ae9d986882d2987ec54ede6f4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> which lies in the <math class='maruku-mathml' display='inline' id='mathml_d37d95852e649c6ae9d986882d2987ec54ede6f4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>k</mi><mo>,</mo><mi>k</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(k,k)</annotation></semantics></math>-piece of the <a class='existingWikiWord' href='/nlab/show/Hodge+structure'>Hodge decomposition</a>, is <em>algebraic</em>, i.e. the class of an <a class='existingWikiWord' href='/nlab/show/algebraic+cycle'>algebraic cycle</a>.</p>
 
-<p>This conjecture is known to be false, hence the refinement of the <a class='existingWikiWord' href='/nlab/show/Hodge+conjecture'>Hodge conjecture</a> to rational cohomology classes. However it is true for <math class='maruku-mathml' display='inline' id='mathml_dc305145fa7482ecba558493458dc0376fcef22a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>k=1</annotation></semantics></math> by the <a class='existingWikiWord' href='/nlab/show/Lefschetz+theorem+on+%281%2C1%29-classes'>Lefschetz theorem on (1,1)-classes</a>.</p>
+<p>This conjecture is known to be false, hence the refinement of the <a class='existingWikiWord' href='/nlab/show/Hodge+conjecture'>Hodge conjecture</a> to rational cohomology classes. However it is true for <math class='maruku-mathml' display='inline' id='mathml_d37d95852e649c6ae9d986882d2987ec54ede6f4_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>k=1</annotation></semantics></math> by the <a class='existingWikiWord' href='/nlab/show/Lefschetz+theorem+on+%281%2C1%29-classes'>Lefschetz theorem on (1,1)-classes</a>.</p>
 
 <h2 id='counterexamples'>Counterexamples</h2>
 
-<p>The integral Hodge conjecture fails in two ways:</p>
+<p>The integral Hodge conjecture can fail in two ways:</p>
 
 <ul>
 <li>There are <a class='existingWikiWord' href='/nlab/show/torsion'>torsion</a> <a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology classes</a> which are not <a class='existingWikiWord' href='/nlab/show/algebraic+cycle'>algebraic</a>.</li>
@@ -378,7 +377,7 @@ margin-left: 0em;
 <li><span class='newWikiWord'>Alena Pirutka<a href='/nlab/new/Alena+Pirutka'>?</a></span>, <span class='newWikiWord'>Nobuaki Yagita<a href='/nlab/new/Nobuaki+Yagita'>?</a></span>, <em>Note on the counterexamples for the integral Tate conjecture over finite fields</em>, <a href='http://arxiv.org/abs/1401.1620'>arXiv:1401.1620</a>.</li>
 </ul>
 
-<p>The ideas of Atiyah-Hirzebruch and Totaro are shown to extend to <a class='existingWikiWord' href='/nlab/show/positive+characteristic'>positive characteristic</a>, using <a class='existingWikiWord' href='/nlab/show/etale+cohomology'>etale cohomology</a> and <a class='existingWikiWord' href='/nlab/show/%C3%A9tale+homotopy'>etale homotopy theory</a>, to give counterexamples to the integral <a class='existingWikiWord' href='/nlab/show/Tate+conjecture'>Tate conjecture</a>, in</p>
+<p>The ideas of Atiyah-Hirzebruch and Totaro are shown to extend to <a class='existingWikiWord' href='/nlab/show/positive+characteristic'>positive characteristic</a>, using <a class='existingWikiWord' href='/nlab/show/%C3%A9tale+cohomology'>etale cohomology</a> and <a class='existingWikiWord' href='/nlab/show/%C3%A9tale+homotopy'>etale homotopy theory</a>, to give counterexamples to the integral <a class='existingWikiWord' href='/nlab/show/Tate+conjecture'>Tate conjecture</a>, in</p>
 
 <ul>
 <li><span class='newWikiWord'>Jean-Louis Colliot-Thélène<a href='/nlab/new/Jean-Louis+Colliot-Th%C3%A9l%C3%A8ne'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/Tam%C3%A1s+Szamuely'>Tamás Szamuely</a>, <em>Autour de la conjecture de Tate `a coefficients Z_l pour les vari&#39;et&#39;es  sur les corps finis_, [arXiv:0902.1666](http://arxiv.org/abs/0902.1666), [pdf](http://www.math.u-psud.fr/~colliot/CTSz21dec2009.pdf).</em></li>
@@ -398,19 +397,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May  3, 2015 18:24:04 
-  by <a class="existingWikiWord" href="/nlab/show/Adeel+Khan+Yusufzai">Adeel Khan</a>
-  (93.131.149.54)
+  <p>
+  Last revised on May  4, 2018 at 18:19:28.
+  See the <a href="https://ncatlab.org/nlab/history/integral Hodge conjecture" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/integral+Hodge+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/integral+Hodge+conjecture/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/integral+Hodge+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/integral+Hodge+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/integral+Hodge+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/integral+Hodge+conjecture/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/integral+Hodge+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/integral+Hodge+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/integral Hodge conjecture/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/integral+Hodge+conjecture" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/integral+Hodge+conjecture" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/integral+Hodge+conjecture" id="view_source" rel="nofollow">Source</a>
