--- a/pages/5375.html
+++ b/pages/5375.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/2206/#Item_18" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -470,11 +469,11 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#tale_homotopy_types'>Étale homotopy types</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <em>anabelian geometry</em> one studies how much information about a <a class='existingWikiWord' href='/nlab/show/space'>space</a> <math class='maruku-mathml' display='inline' id='mathml_3b3e3f87208de792c960c2d7309874698b3de3c0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> (specifically: an <a class='existingWikiWord' href='/nlab/show/algebraic+variety'>algebraic variety</a>) is contained already in its first <a class='existingWikiWord' href='/nlab/show/%C3%A9tale+homotopy'>étale homotopy group</a> <math class='maruku-mathml' display='inline' id='mathml_3b3e3f87208de792c960c2d7309874698b3de3c0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> (specifically: the <a class='existingWikiWord' href='/nlab/show/algebraic+fundamental+group'>algebraic fundamental group</a>).</p>
+<p>In <em>anabelian geometry</em> one studies how much information about a <a class='existingWikiWord' href='/nlab/show/space'>space</a> <math class='maruku-mathml' display='inline' id='mathml_98156409a7cdd9d679def880f62ae9e036ceb891_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> (specifically: an <a class='existingWikiWord' href='/nlab/show/algebraic+variety'>algebraic variety</a>) is contained already in its first <a class='existingWikiWord' href='/nlab/show/%C3%A9tale+homotopy'>étale homotopy group</a> <math class='maruku-mathml' display='inline' id='mathml_98156409a7cdd9d679def880f62ae9e036ceb891_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> (specifically: the <a class='existingWikiWord' href='/nlab/show/algebraic+fundamental+group'>algebraic fundamental group</a>).</p>
 
-<p>The term “anabelian” is supposed to be alluding to the fact that “the <em>less</em> <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian</a> <math class='maruku-mathml' display='inline' id='mathml_3b3e3f87208de792c960c2d7309874698b3de3c0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> is, the more information it carries about <math class='maruku-mathml' display='inline' id='mathml_3b3e3f87208de792c960c2d7309874698b3de3c0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.” Precisely: an <a class='existingWikiWord' href='/nlab/show/anabelian+group'>anabelian group</a> is a non-<a class='existingWikiWord' href='/nlab/show/trivial+group'>trivial group</a> for which every <a class='existingWikiWord' href='/nlab/show/index+of+a+subgroup'>finite index subgroup</a> has trivial <a class='existingWikiWord' href='/nlab/show/center'>center</a>.</p>
+<p>The term “anabelian” is supposed to be alluding to the fact that “the <em>less</em> <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian</a> <math class='maruku-mathml' display='inline' id='mathml_98156409a7cdd9d679def880f62ae9e036ceb891_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> is, the more information it carries about <math class='maruku-mathml' display='inline' id='mathml_98156409a7cdd9d679def880f62ae9e036ceb891_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.” Precisely: an <a class='existingWikiWord' href='/nlab/show/anabelian+group'>anabelian group</a> is a non-<a class='existingWikiWord' href='/nlab/show/trivial+group'>trivial group</a> for which every <a class='existingWikiWord' href='/nlab/show/index+of+a+subgroup'>finite index subgroup</a> has trivial <a class='existingWikiWord' href='/nlab/show/center'>center</a>.</p>
 
-<p>Accordingly, an algebraic variety whose <a class='existingWikiWord' href='/nlab/show/decategorification'>isomorphism class</a> is entirely determined by <math class='maruku-mathml' display='inline' id='mathml_3b3e3f87208de792c960c2d7309874698b3de3c0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> is called an <strong>anabelian variety</strong>.</p>
+<p>Accordingly, an algebraic variety whose <a class='existingWikiWord' href='/nlab/show/decategorification'>isomorphism class</a> is entirely determined by <math class='maruku-mathml' display='inline' id='mathml_98156409a7cdd9d679def880f62ae9e036ceb891_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> is called an <strong>anabelian variety</strong>.</p>
 
 <p>An early conjecture motivating the theory (in <a href='#Grothendieck'>Grothendieck 84</a>) was that all <a class='existingWikiWord' href='/nlab/show/hyperbolic+curves'>hyperbolic curves</a> over <a class='existingWikiWord' href='/nlab/show/number+field'>number fields</a> are anabelian varieties. This was eventually proven by various authors in various cases. In (<a href='#Uchida'>Uchida</a>) and (<a href='#Neukirch'>Neukirch</a>) it was shown that an isomorphism between <a class='existingWikiWord' href='/nlab/show/Galois+group'>Galois groups</a> of <a class='existingWikiWord' href='/nlab/show/number+field'>number fields</a> implies the existence of an isomorphism between those number fields. For algebraic curves over <a class='existingWikiWord' href='/nlab/show/finite+field'>finite fields</a>, over <a class='existingWikiWord' href='/nlab/show/number+field'>number fields</a> and over <a class='existingWikiWord' href='/nlab/show/p-adic+number'>p-adic field</a> the statement was eventually completed by (<a href='#Mochizuki96'>Mochizuki 96</a>).</p>
 
@@ -534,7 +533,7 @@ margin-left: 0em;
 <li id='Grothendieck'><a class='existingWikiWord' href='/nlab/show/Alexander+Grothendieck'>Alexander Grothendieck</a>, <em><a class='existingWikiWord' href='/nlab/show/Esquisse+d%27un+programme'>Esquisse d&#39;un programme</a></em> (1984).</li>
 </ul>
 
-<p>In <a href='#Grothendieck'>Grothendieck 84</a> one finds: “… C’est au cours de ce travail (”<a class='existingWikiWord' href='/nlab/show/Long+March'>Long March</a>“) aussi (mais développé dans des notes distinctes) qu’apparaît le thème central de la géométrie algébrique anabélienne …” there is a project to edit and transcribe this note: <a href='https://github.com/gcarmonamateo/LaLongueMarcheAnabelian'>Anabelian notes</a></p>
+<p>In <a href='#Grothendieck'>Grothendieck 84</a> one finds: “… C’est au cours de ce travail (”<a class='existingWikiWord' href='/nlab/show/Long+March'>Long March</a>“) aussi (mais développé dans des notes distinctes) qu’apparaît le thème central de la géométrie algébrique anabélienne (…) c’est alors que se dégage la “conjecture fondamentale de la géométrie algébrique anabélienne”, proche des conjectures de Mordell et de Tate que vient de démontrer Faltings.” there is a project to edit this note: <a href='https://github.com/gcarmonamateo/LaLongueMarcheAnabelian'>Anabelian notes</a></p>
 
 <p>A relation with the theory of <a class='existingWikiWord' href='/nlab/show/motive'>motive</a>s is in</p>
 
@@ -569,7 +568,7 @@ margin-left: 0em;
 <p>The classification of anabelian varieties for <a class='existingWikiWord' href='/nlab/show/number+field'>number fields</a> was shown in</p>
 
 <ul id='Neukirch'>
-<li>J. Neukirch, <em>Kennzeichnung der <math class='maruku-mathml' display='inline' id='mathml_3b3e3f87208de792c960c2d7309874698b3de3c0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-adischen und der endlichen algebraischen Zahlkörper</em>, Invent. Math. 6 (1969), p. 296–314.</li>
+<li>J. Neukirch, <em>Kennzeichnung der <math class='maruku-mathml' display='inline' id='mathml_98156409a7cdd9d679def880f62ae9e036ceb891_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-adischen und der endlichen algebraischen Zahlkörper</em>, Invent. Math. 6 (1969), p. 296–314.</li>
 </ul>
 
 <ul>
@@ -622,19 +621,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 20, 2018 11:51:53 
-  by <span class="newWikiWord">Alex<a href="/nlab/new/Alex">?</a></span>
-  (190.9.198.49)
+  <p>
+  Last revised on May  5, 2018 at 14:00:38.
+  See the <a href="https://ncatlab.org/nlab/history/anabelian geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anabelian+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anabelian+geometry/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/anabelian+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anabelian+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/anabelian+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anabelian+geometry/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/anabelian+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anabelian+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/anabelian geometry/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/anabelian+geometry" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/anabelian+geometry" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/anabelian+geometry" id="view_source" rel="nofollow">Source</a>
