--- a/pages/673.html
+++ b/pages/673.html
@@ -291,6 +291,7 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
     <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
     <a href="https://ncatlab.org/nlab/author/David%20Roberts" title="Overview of nLab pages which David Roberts has edited" style="color: black">Pages contributed to</a> |
@@ -314,7 +315,7 @@ margin-left: 0em;
 
 <p>I was a Research Associate (i.e. a postdoc) at the University of Adelaide from October 2013 to April 2015. For the period July-2017 to February 2018 I was a Lecturer in the School of Mathematical Sciences.</p>
 
-<p>You may also find me on: <a href='https://www.ams.org/mathscinet/search/author.html?mrauthid=788905'>MathSciNet</a>|<a href='https://mathoverflow.net/users/4177/david-roberts'>MathOverflow</a>|<a href='https://plus.google.com/+DavidRoberts/'>Google+</a>|<a href='https://arxiv.org/a/roberts_d_1.html'>arXiv</a>|<a href='http://orcid.org/0000-0002-3478-0522'>ORCiD</a>|<a href='publons.com/a/430214/'>Publons</a></p>
+<p>You may also find me on: <a href='https://www.ams.org/mathscinet/search/author.html?mrauthid=788905'>MathSciNet</a>|<a href='https://mathoverflow.net/users/4177/david-roberts'>MathOverflow</a>|<a href='https://thehighergeometer.wordpress.com/'>Wordpress</a>|<a href='https://arxiv.org/a/roberts_d_1.html'>arXiv</a>|<a href='http://orcid.org/0000-0002-3478-0522'>ORCiD</a>|<a href='https://publons.com/a/430214/'>Publons</a></p>
 
 <p>If you need it, here is my email: droberts.[fifth and largest-known <a class='existingWikiWord' href='/nlab/show/Fermat+number'>Fermat prime</a>]@gmail.[etc]</p>
 
@@ -334,7 +335,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><em>The smooth Hom-stack of an orbifold</em>, <a href='https://arxiv.org/abs/1610.05904'>arXiv:1610.05904</a>. To appear in the <a href='https://www.matrix-inst.org.au/2016-matrix-annals/'>2016 MATRIX Annals</a>. (Accepted 13 December 2016) (<a href='https://www.springer.com/gp/book/9783319722986'>SpringerLink</a> - to be published March 2018). Joint with <a class='existingWikiWord' href='/nlab/show/Raymond+Vozzo'>Raymond Vozzo</a></p>
+<p><em>The smooth Hom-stack of an orbifold</em>, In: Wood D., de Gier J., Praeger C., Tao T. (eds) 2016 MATRIX Annals. MATRIX Book Series, vol 1, doi:<a href='https://doi.org/10.1007/978-3-319-72299-3_3'>10.1007/978-3-319-72299-3_3</a>, <a href='https://arxiv.org/abs/1610.05904'>arXiv:1610.05904</a>, <a href='https://www.matrix-inst.org.au/2016-matrix-annals/'>MATRIX hosted version</a>. Joint with <a class='existingWikiWord' href='/nlab/show/Raymond+Vozzo'>Raymond Vozzo</a></p>
 </li>
 
 <li>
@@ -395,11 +396,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_a75882028cfec58dea5b8ce9ac08c27b857cf860_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
+<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_12352fdcd809dd2aeaaa638b1e1bd3afd9da1d1f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
 </li>
 
 <li>
-<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_a75882028cfec58dea5b8ce9ac08c27b857cf860_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
+<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_12352fdcd809dd2aeaaa638b1e1bd3afd9da1d1f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
 </li>
 
 <li>
@@ -518,14 +519,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 24, 2018 at 23:15:50.
+  Last revised on May  6, 2018 at 20:54:12.
   See the <a href="https://ncatlab.org/nlab/history/David Roberts" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/151" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(151 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/152" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(152 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/David Roberts/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
