--- a/pages/9183.html
+++ b/pages/9183.html
@@ -291,8 +291,9 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4666/#Item_14" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4666/#Item_15" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -769,7 +770,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -1121,8 +1122,8 @@ margin-left: 0em;
 <p>Resonaances, <em><a href='http://resonaances.blogspot.de/2013/01/how-many-neutrinos-in-sky.html'>How many neutrinos in the sky</a></em></p>
 </li>
 
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Ethan+Siegel'>Ethan Siegel</a>, <em><a href='https://medium.com/starts-with-a-bang/7-independent-pieces-of-evidence-for-dark-matter-3692126a2283'>Seven independent pieces of evidence for dark matter</a></em>, <em><a href='https://medium.com/starts-with-a-bang/10-facts-everyone-should-know-about-dark-matter-1ce2b222cf08'>Ten things everyone should know about dark matter</a></em> 2015</p>
+<li id='Hooper18'>
+<p><a class='existingWikiWord' href='/nlab/show/Daniel+Hooper'>Daniel Hooper</a>, <em>In Defense of Dark Matter</em>, 2018 (<a href='http://online.kitp.ucsb.edu/online/cdm-c18/hooper/'>web</a>)</p>
 </li>
 </ul>
 
@@ -1185,15 +1186,15 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 16, 2018 at 03:18:05.
+  Last revised on May  7, 2018 at 12:44:59.
   See the <a href="https://ncatlab.org/nlab/history/dark matter" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dark+matter/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-
+  <a href="/nlab/edit/dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dark+matter/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/dark matter/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
     <a href="/nlab/print/dark+matter" accesskey="p" id="view_print" rel="nofollow">Print</a>
