--- a/pages/7379.html
+++ b/pages/7379.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -318,12 +317,12 @@ margin-left: 0em;
 
 <h2 id='definition'>Definition</h2>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_007e2e4f36519b3e75f147c58f1ccc726650ea41_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C H}</annotation></semantics></math> be the <a class='existingWikiWord' href='/nlab/show/category'>category</a> of <a class='existingWikiWord' href='/nlab/show/compactum'>compact Hausdorff spaces</a>. This may be regarded as a (large) <a class='existingWikiWord' href='/nlab/show/site'>site</a> with the topology of finite coverings, in fact a <a class='existingWikiWord' href='/nlab/show/concrete+site'>concrete site</a>.</p>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_eee25d5d39259a98782574eb719dcd91c80d61af_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C H}</annotation></semantics></math> be the <a class='existingWikiWord' href='/nlab/show/category'>category</a> of <a class='existingWikiWord' href='/nlab/show/compactum'>compact Hausdorff spaces</a>. This may be regarded as a (large) <a class='existingWikiWord' href='/nlab/show/site'>site</a> with the topology of finite coverings, in fact a <a class='existingWikiWord' href='/nlab/show/concrete+site'>concrete site</a>.</p>
 
-<div class='un_def'>
+<div class='un_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <strong>quasi-topological space</strong> is a (small-set valued) <a class='existingWikiWord' href='/nlab/show/concrete+sheaf'>concrete sheaf</a> on <math class='maruku-mathml' display='inline' id='mathml_007e2e4f36519b3e75f147c58f1ccc726650ea41_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C H}</annotation></semantics></math>.</p>
+<p>A <strong>quasi-topological space</strong> is a (small-set valued) <a class='existingWikiWord' href='/nlab/show/concrete+sheaf'>concrete sheaf</a> on <math class='maruku-mathml' display='inline' id='mathml_eee25d5d39259a98782574eb719dcd91c80d61af_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C H}</annotation></semantics></math>.</p>
 </div>
 
 <p>The (super-large) category of quasi-topological spaces is a <a class='existingWikiWord' href='/nlab/show/quasitopos'>quasitopos</a> (although this is not immediately obvious for <a class='existingWikiWord' href='/nlab/show/size+issues'>size reasons</a> — in particular, it is probably not a <a class='existingWikiWord' href='/nlab/show/quasitopos'>Grothendieck quasitopos</a>). In particular, it is a <a class='existingWikiWord' href='/nlab/show/locally+cartesian+closed+category'>locally cartesian closed category</a>.</p>
@@ -342,19 +341,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 25, 2013 20:08:37 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (64.89.53.86)
+  <p>
+  Last revised on May  8, 2018 at 02:48:19.
+  See the <a href="https://ncatlab.org/nlab/history/quasi-topological space" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quasi-topological+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quasi-topological+space/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/quasi-topological+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quasi-topological+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/quasi-topological+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quasi-topological+space/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/quasi-topological+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quasi-topological+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/quasi-topological space/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/quasi-topological+space" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/quasi-topological+space" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/quasi-topological+space" id="view_source" rel="nofollow">Source</a>
