--- a/pages/19192.html
+++ b/pages/19192.html
@@ -291,6 +291,7 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
     <a href="https://nforum.ncatlab.org/discussion/8443/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
@@ -316,15 +317,15 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Semisimpliziale Algebraische Topologie. Springer, Berlin, Heidelberg 1968</p>
+<p><em>Semisimpliziale Algebraische Topologie</em>, Springer, Berlin, Heidelberg 1968</p>
 </li>
 
 <li>
-<p>Regular Solids and Isolated Singularities. Vieweg, Braunschweig, Wiesbaden 1986.</p>
+<p><em>Regular Solids and Isolated Singularities</em>, Vieweg, Braunschweig, Wiesbaden 1986.</p>
 </li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_5a55550682b4c8d1f4c76a937b26fadb70f907ed_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_2a8cb04808a1544a85de338b5974ece5f25bdc0f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -345,15 +346,15 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 16, 2018 at 02:34:41.
+  Last revised on May  8, 2018 at 06:44:19.
   See the <a href="https://ncatlab.org/nlab/history/Klaus Lamotke" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Klaus+Lamotke" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Klaus+Lamotke/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Klaus+Lamotke" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Klaus+Lamotke" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-
+  <a href="/nlab/edit/Klaus+Lamotke" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Klaus+Lamotke/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Klaus+Lamotke" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Klaus+Lamotke" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Klaus Lamotke/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
     <a href="/nlab/print/Klaus+Lamotke" accesskey="p" id="view_print" rel="nofollow">Print</a>
